k8s/metallb-config.yaml
apiVersion: v1
kind: Service
metadata:
  name: vproweb-lb
  namespace: vproproject
  annotations:
    metallb.universe.tf/loadBalancerIPs: "10.1.5.100"
spec:
  selector:
    app: vproweb
  ports:
  - port: 80
    targetPort: http
    name: http
  type: LoadBalancer
