k8s/tomcat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vproapp
  namespace: vproproject
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vproapp
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: vproapp
    spec:
      containers:
      - name: vproapp
        image: salwansaied/vroproject:app
        ports:
        - containerPort: 8080
          name: app-port
        resources:
          requests:
            memory: "512Mi"
            cpu: "200m"
          limits:
            memory: "1024Mi"
            cpu: "500m"
        livenessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 180
          periodSeconds: 30
          timeoutSeconds: 10
        readinessProbe:
          httpGet:
            path: /login
            port: 8080
          initialDelaySeconds: 120
          periodSeconds: 10
          timeoutSeconds: 5
        volumeMounts:
        - name: app-config
          mountPath: /usr/local/tomcat/application.properties
          subPath: application.properties
      volumes:
      - name: app-config
        configMap:
          name: vproapp-config
---
apiVersion: v1
kind: Service
metadata:
  name: vproapp-service
  namespace: vproproject
spec:
  selector:
    app: vproapp
  ports:
  - port: 8080
    targetPort: app-port
