k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vprofile-ingress
  namespace: vproproject
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: vprofile.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: vproweb-service
            port:
              number: 80
